--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -60,5 +60,5 @@ jobs:
     - name: Upload package to PyPI
       env:
         TWINE_USERNAME: __token__
-        TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+        TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
       run: python -m twine upload dist/*
